service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-course-nginx
  namespace: k8s-course
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: k8s-course-nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      protocol: TCP
#  type: LoadBalancer
  type: NodePort
