service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: k8s-course
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  type: ClusterIP
