service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-course
  namespace: k8s-course
spec:
  selector:
    app: k8s-course
  ports:
    - name: tomcat
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: nginx
      port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
