ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: k8s-course
  name: test-ingress
  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: k8s-course
    servicePort: 8080
  rules:
    - http:
        paths:
          - path: /random-app
            backend:
              serviceName: k8s-course
              servicePort: 8080

    #    - host: k8s-course.ddns.net
    - http:
        paths:
          - path: /logs
            backend:
              serviceName: k8s-course-nginx
              servicePort: 80
